styles.css
body {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin: 0px;
    width: auto;
}

.header, .footer, .hero {
    background-color: #1f2937;
    color: #e5e7eb;
    font-size: 18px;
    display: flex;
    padding: 16px;
    align-items: center;
}

.links {
    text-decoration: none;
    display: flex;
}

.header {
    justify-content: space-between;
    padding-left: 120px;
    padding-right: 120px;
}

a {
    text-decoration: none;
    color: #e5e7eb;
    font-size: 18px;
}

ul {
    list-style: none;
    margin: 0px;
    padding: 0px;
    gap: 16px;
}

.logo {
    font-size: 24px;
    color: #F9FAF8;
    border-radius: 8px;
    border-color: #e5e7eb;
    border: 2px solid;
    padding: 8px;
}

.content {
    display: flex;
    flex-direction: column;
}

img {
    width: 200px;
    border-color: royalblue;
    border-radius: 8px;
    border: 2px solid #1f2937;
}

.intro {
    font-size: 48px;
    font-weight: 800;
    color: #F9FAF8;
}

button {
  padding: 8px 16px;
  border-radius: 8px;
  background: #3882F6;
  border: 1px solid #ddd;
  color: white;
  width: 100px;
  border-color: #3882F6;
}

.herol {
    gap: 16px;
    display: flex;
    flex-direction: column;
    margin-right: 48px;
}

.barks {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 16px;
    font-size: 36px;
    font-weight: 800;

}

.cards {
    display: flex;
    gap: 36px;
    font-size: 18px;
    margin: 16px;
    justify-content: center;
    margin-bottom: 36px;
    font-weight: normal;
    flex-wrap: wrap;
}

.text {
    text-align: center;
}

.mainpup {
    width: 400px;
    border-radius: 0px;
}

.hero {
    display: flex;
    padding: 36px;
    padding-left: 200px;
    padding-right: 200px;
    justify-content: space-between;
}

.info {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 200px;
}

.quote {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #e5e7eb;
    font-size: 36px;
    font-weight: lighter;
    padding: 72px;
}
.wise {
    width: 500px;
}

.credit {
    display: flex;
    flex-direction: row-reverse;
    font-size: 18px;
    font-weight: bold;
    width: 500px;
}

.signup {
    padding: 72px;
}
.container {
    display: flex;
    padding: 36px;
    flex-direction: column;
    background-color: #3882F6;
    border-radius: 8px;
    color: white;
}

.click {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding-right: 72px;
}

.white {
    border-color: white;
}

.footer {
    display: flex;
    justify-content: center;
    align-items: center;
}

.barknow {
    font-weight: bold;
    font-size: 24px;
}

